# lib_board_support

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  Jenkinsfile  README.rst  settings.yml
doc/: Doxyfile.inc  exclude_patterns.inc
doc/rst/: lib_board_support.rst
doc/rst/xk_audio_216_mc_ab/: hw_216_mc.rst
doc/rst/xk_audio_316_mc_ab/: hw_316_mc.rst
doc/rst/xk_evk_xe216/: hw_evk_xe216.rst
doc/rst/xk_evk_xu316/: hw_evk_xu316.rst
doc/rst/xk_voice_l71/: hw_xk_voice_l71.rst
examples/: CMakeLists.txt  deps.cmake
examples/app_evk_316_simple_c/: CMakeLists.txt  README.rst
examples/app_evk_316_simple_c/src/: main.c  top_level.xc
examples/app_xk_316_audio_mc_loopback/: CMakeLists.txt
examples/app_xk_audio_316_mc_simple_c/: CMakeLists.txt
examples/app_xk_audio_316_mc_simple_c/src/: main.c  top_level.xc
examples/app_xk_audio_316_mc_simple_xc/: CMakeLists.txt
examples/app_xk_audio_316_mc_simple_xc/src/: main.xc
examples/app_xk_voice_l71_i2s_c/: CMakeLists.txt
examples/app_xk_voice_l71_i2s_c/src/: main.c  xk-voice-l71.xn
examples/app_xk_voice_l71_simple_c/: CMakeLists.txt
examples/app_xk_voice_l71_simple_c/src/: main.c
examples/app_xu316_i2s_loopback/: CMakeLists.txt  README.rst
examples/app_xu316_i2s_loopback/src/: main.xc
examples/app_xu316_mc_simple_c/: CMakeLists.txt  README.rst
examples/app_xu316_mc_simple_c/src/: main.c  top_level.xc
lib_board_support/: lib_build_info.cmake  module_build_info
lib_board_support/api/boards/: boards_utils.h
lib_board_support/api/drivers/: cs2100.h  (+5 more)
xn_files/: readme.txt  xk-eth-xu316-dual-100m.xn
(+22 files in other folders)
